added Design Patterns task

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>2.21.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+        <dependency>
             <groupId>calculator</groupId>
             <artifactId>calculator-1.0</artifactId>
             <version>v1</version>
